syntax ="proto3";

option php_namespace = "App\\Proto";
option php_metadata_namespace="App\\Proto";

enum TransactionType {
    TRANSACTION_UNRECOGNISED=0;
    TRANSACTION_IN=1;
    TRANSACTION_OUT=2;
}
enum BomType {
    BOM_UNRECOGNISED=0;
    BOM_MERGE=1;
    BOM_EXPLODE=2;
}
